# api/src/controllers/router.js
@@ -545,7 +545,9 @@ router.get('/requestorders', bodyParser(), async (ctx) => {
   const {
     chainId,
     app,
+    isAppStrict,
     dataset,
+    isDatasetStrict,
     requester,
     beneficiary,
     category,
@@ -554,13 +556,16 @@ router.get('/requestorders', bodyParser(), async (ctx) => {
     maxTrust,
     minVolume,
     workerpool,
+    isWorkerpoolStrict,
     page,
     pageIndex,
     pageSize,
   } = await object({
     chainId: chainIdSchema().required(),
     app: addressOrAnySchema(),
+    isAppStrict: booleanSchema(),
     dataset: addressOrAnySchema(),
+    isDatasetStrict: booleanSchema(),
     requester: addressOrAnySchema(),
     beneficiary: addressOrAnySchema(),
     category: positiveIntSchema(),
@@ -569,6 +574,7 @@ router.get('/requestorders', bodyParser(), async (ctx) => {
     maxTrust: positiveIntSchema(),
     minVolume: positiveStrictIntSchema(),
     workerpool: addressOrAnySchema(),
+    isWorkerpoolStrict: booleanSchema(),
     page: positiveIntSchema(),
     pageIndex: positiveIntSchema(),
     pageSize: positiveIntSchema().max(maxPageSize).min(minPageSize),
@@ -576,7 +582,9 @@ router.get('/requestorders', bodyParser(), async (ctx) => {
   const { orders, count, nextPage } = await getRequestorders({
     chainId,
     app,
+    isAppStrict,
     dataset,
+    isDatasetStrict,
     requester,
     beneficiary,
     category,
@@ -585,6 +593,7 @@ router.get('/requestorders', bodyParser(), async (ctx) => {
     maxTrust,
     minVolume,
     workerpool,
+    isWorkerpoolStrict,
     page,
     pageIndex,
     pageSize,
